Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: mydeployments
spec:
   replicas: 2
   selector:     
    matchLabels:
     name: deployment
   template:
     metadata:
       name: testpod
       labels:
         name: deployment
     spec:
      containers:
        - name: container1
          image: centos 
          command: ["/bin/bash", "-c", "while true; do echo Hello, Sumant.; sleep 5; done"]
