contcomm.yml
kind: Pod
apiVersion: v1
metadata:
  name: testpod
spec:
  containers:
    - name: container1
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo Hello, Sumant; sleep 5 ; done"]
    - name: container2
      image: httpd
      ports:
       - containerPort: 80
