deployjenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: jenkins-deployment
  labels:
    name: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: deployment
  template:
    metadata:
      labels:
        name: deployment
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
          - containerPort: 8080
