environmentvar.yml
kind: Pod
apiVersion: v1
metadata:
  name: envvariable
spec:
  containers:
    - name: container4
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo Hello-Sumant; sleep 5 ; done"]
