labelpod.yml
kind: Pod
apiVersion: v1
metadata:
  name: labelpod
  labels:                                                   
    env: development
    class: pods
spec:
    containers:
       - name: container1
         image: ubuntu
         command: ["/bin/bash", "-c", "while true; do echo Hello Sumant; sleep 5 ; done"]
