nodeselector.yml
kind: Pod
apiVersion: v1
metadata:
  name: nodelabels
  labels:
    env: development
spec:
    containers:
       - name: c00
         image: ubuntu
         command: ["/bin/bash", "-c", "while true; do echo Hello Sumant; sleep 5 ; done"]
    nodeSelector:                                         
       hardware: t2-medium
