pod.yml
kind: Pod                              
apiVersion: v1                     
metadata:                           
  name: testpod
  labels:
   name: deployment    
spec:                                    
  containers:                      
    - name: c00                     
      image: ubuntu              
      command: ["/bin/bash", "-c", "while true; do echo Hello, Sumant; sleep 5 ; done"]
