pod1.yml
kind: Pod                              
apiVersion: v1                     
metadata:                           
  name: firstpod
  annotations: 
    description: My first test pod.                     
spec:                                    
  containers:                      
    - name: container1                     
      image: ubuntu              
      command: ["/bin/bash", "-c", "while true; do echo Hello-Sumant; sleep 5 ; done"]
    - name: container2                    
      image: ubuntu              
      command: ["/bin/bash", "-c", "while true; do echo Welcome Sumant, hope you are doing well; sleep 5 ; done"]
    - name: container3                 
      image: ubuntu              
      command: ["/bin/bash", "-c", "while true; do echo Good morning sumant; sleep 5 ; done"]
  restartPolicy: Never         # Defaults to Always
