pod2pod-1.yml
kind: Pod
apiVersion: v1
metadata:
  name: testpod1
spec:
  containers:
    - name: container1
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo Good morning; sleep 5 ; done"]
      ports:
       - containerPort: 80
