pod2pod-2.yml
kind: Pod
apiVersion: v1
metadata:
  name: testpod2
spec:
  containers:
    - name: container1
      image: httpd
      ports:
       - containerPort: 80
