ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: minimal-ingress

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx-example

  rules:

  - host: nginx-demo.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: demoservice
                   
            port:

              number: 80
